avoid jdk9 warning